tests/NormalTests/paczka1/fuzzy1/22184864.err
Error in line 7: UFVVsXDP A913 61,5
Error in line 23: Zcif3eZ2O S828 86,9
Error in line 25: S589 S589 73,9
Error in line 26: gmibtRefdV S828 89,0
Error in line 28: UFVVsXDP A913 26,0
Error in line 38: JJ7SGFcFeu S33 20,96
